tests/ui/validate_custom_nonsense.stderr
error: expected expression
 --> $DIR/validate_custom_nonsense.rs:5:25
  |
5 |     #[validate(validator = "struct CustomValidator;")]
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^
