tests/ui/validate_custom_nonsense.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData {
	#[validate(validator = "struct CustomValidator;")]
	value: u8
}

fn main() {
}
